Fix content spacing for newlines and remove css
Instead of newlines in WordPress content only being a simple line break,
this corrects them to be line breaks with extra space between text lines.

In short: br --> hr

Unused css is also removed.

--- a/media/fs/css/main.css
+++ b/media/fs/css/main.css
@@ -113,241 +113,3 @@ Copyright (C) 2012 Mark West.
 .menu a:hover ul{
   visibility:visible;
 }
-
-/*
- * http://www.oscaralexander.com/tutorials/how-to-make-sexy-buttons-with-css.html
- */
-
-.bclear { /* generic container (i.e. div) for floating buttons */
-    overflow: hidden;
-    width: 100%;
-}
-
-a.button {
-    background: transparent url('../img/bg_button_a.gif') no-repeat scroll top right;
-    color: #444;
-    display: block;
-    float: left;
-    font: normal 12px arial, sans-serif;
-    height: 24px;
-    margin-right: 6px;
-    padding-right: 18px; /* sliding doors padding */
-    text-decoration: none;
-    z-index: 1000;
-}
-
-a.button span {
-    background: transparent url('../img/bg_button_span.gif') no-repeat;
-    display: block;
-    line-height: 14px;
-    padding: 5px 0 5px 18px;
-}
-
-a.button:active {
-    background-position: bottom right;
-    color: #000;
-    outline: none; /* hide dotted outline in Firefox */
-}
-
-a.button:active span {
-    background-position: bottom left;
-    padding: 6px 0 4px 18px; /* push text down 1px */
-}
-
-/* Shared styles */
-/* http://nicolasgallagher.com/css-drop-shadows-without-images/ */
-
-.container {
-    position:relative;
-    z-index:1;
-}
-.container:after {
-    content:"";
-    display:block;
-    clear:both;
-    visibility:hidden;
-    height:0;
-    font-size:0;
-}
-
-.drop-shadow {
-    position:relative;
-    float:left;
-    padding:1em;
-    background:#fff;
-    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-       -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-            box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-}
-
-.drop-shadow:before,
-.drop-shadow:after {
-    content:"";
-    position:absolute; 
-    z-index:-2;
-}
-
-/* Lifted corners */
-
-.lifted {
-    -moz-border-radius:4px; 
-         border-radius:4px;
-}
-
-.lifted:before,
-.lifted:after { 
-    bottom:15px;
-    left:10px;
-    height:20%;
-    max-width:300px;
-    -webkit-box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);   
-       -moz-box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);
-            box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);
-    -webkit-transform:rotate(-3deg);    
-       -moz-transform:rotate(-3deg);   
-        -ms-transform:rotate(-3deg);   
-         -o-transform:rotate(-3deg);
-            transform:rotate(-3deg);
-}
-
-.lifted:after {
-    right:10px; 
-    left:auto;
-    -webkit-transform:rotate(3deg);   
-       -moz-transform:rotate(3deg);  
-        -ms-transform:rotate(3deg);  
-         -o-transform:rotate(3deg);
-            transform:rotate(3deg);
-}
-
-/* Curled corners */
-
-.curled {
-    border:1px solid #efefef; 
-    -moz-border-radius:0 0 120px 120px / 0 0 6px 6px;    
-         border-radius:0 0 120px 120px / 0 0 6px 6px;
-}
-
-.curled:before,
-.curled:after {
-    bottom:12px;
-    left:10px;
-    height:55%;
-    max-width:200px;
-    -webkit-box-shadow:0 8px 12px rgba(0, 0, 0, 0.5); 
-       -moz-box-shadow:0 8px 12px rgba(0, 0, 0, 0.5); 
-            box-shadow:0 8px 12px rgba(0, 0, 0, 0.5); 
-    -webkit-transform:skew(-8deg) rotate(-3deg);
-       -moz-transform:skew(-8deg) rotate(-3deg);
-        -ms-transform:skew(-8deg) rotate(-3deg);
-         -o-transform:skew(-8deg) rotate(-3deg);
-            transform:skew(-8deg) rotate(-3deg);
-} 
-
-.curled:after { 
-    right:10px; 
-    left:auto;
-    -webkit-transform:skew(8deg) rotate(3deg); 
-       -moz-transform:skew(8deg) rotate(3deg);     
-        -ms-transform:skew(8deg) rotate(3deg);     
-         -o-transform:skew(8deg) rotate(3deg); 
-            transform:skew(8deg) rotate(3deg);
-}
-
-/* Perspective */
-
-.perspective:before {
-    left:80px;
-    bottom:5px;
-    width:50%;
-    height:35%;
-    max-width:200px;
-    -webkit-box-shadow:-80px 0 8px rgba(0, 0, 0, 0.4);
-       -moz-box-shadow:-80px 0 8px rgba(0, 0, 0, 0.4);
-            box-shadow:-80px 0 8px rgba(0, 0, 0, 0.4);
-    -webkit-transform:skew(50deg);
-       -moz-transform:skew(50deg);
-        -ms-transform:skew(50deg);
-         -o-transform:skew(50deg);
-            transform:skew(50deg);
-    -webkit-transform-origin:0 100%;
-       -moz-transform-origin:0 100%;
-        -ms-transform-origin:0 100%;
-         -o-transform-origin:0 100%;
-            transform-origin:0 100%;
-}
-
-.perspective:after {
-    display:none;
-}
-
-/* Raised shadow - no pseudo-elements needed */
-
-.raised {
-    -webkit-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-       -moz-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-            box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-}
-
-/* Curved shadows */
-
-.curved:before {
-    top:10px;
-    bottom:10px;
-    left:0;
-    right:50%;
-    -webkit-box-shadow:0 0 15px rgba(0,0,0,0.6);
-    -moz-box-shadow:0 0 15px rgba(0,0,0,0.6);
-    box-shadow:0 0 15px rgba(0,0,0,0.6);
-    -moz-border-radius:10px / 100px;
-    border-radius:10px / 100px;
-}
-
-.curved-vt-2:before {
-    right:0;
-}
-
-.curved-hz-1:before {
-    top:50%;
-    bottom:0;
-    left:10px;
-    right:10px;
-    -moz-border-radius:100px / 10px;
-    border-radius:100px / 10px;
-}
-
-.curved-hz-2:before {
-    top:0;
-    bottom:0;
-    left:10px;
-    right:10px;
-    -moz-border-radius:100px / 10px;
-    border-radius:100px / 10px;
-}
-
-/* Rotated box */
-
-.rotated {
-    -webkit-box-shadow:none;
-       -moz-box-shadow:none;
-            box-shadow:none;
-    -webkit-transform:rotate(-3deg);    
-       -moz-transform:rotate(-3deg);   
-        -ms-transform:rotate(-3deg);
-         -o-transform:rotate(-3deg);
-            transform:rotate(-3deg);
-}
-
-.rotated > :first-child:before {
-    content:"";
-    position:absolute;
-    z-index:-1;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    background:#fff;
-    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-       -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-            box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-}
